# midi2movie

./: .gitmodules  CMakeLists.txt  README.md
include/: mapping.h  scoredrawer.h  textdrawer.h
src/: main.cpp  mapping.cpp  scoredrawer.cpp  textdrawer.cpp
